# sessak-django

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  pytest.ini
apps/users/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
sessak/: asgi.py  settings.py  urls.py  wsgi.py
sessak/apps/entities/: urls.py  views.py
sessak/config/: settings.py  urls.py
