[tool.poetry]
name = "sd"
version = "0.1.0"
description = ""
authors = ["sds7629 <sds7629@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"

[tool.isort]
profile= "black"

[tool.black]
line_length = 120

[tool.flake8]
extend-ignore = [
    'E121',
    'E122',
    'E126',
    'E127',
    'E128',
    'E203',
    'E225',
    'E226',
    'E231',
    'E241',
    'E251',
    'E261',
    'E265',
    'E302',
    'E303',
    'E305',
    'E402',
    'E741',
    'E501',
    'E712',
    'E722',
    'W503']
exclude = ['.venv/*']
max-line-length = 120
count = true

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
python_version = "3.11"
show_error_codes = true
strict = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.8.0"
pydantic = "^2.6.3"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
