[tool.poetry]
name = "sd"
version = "0.1.0"
description = ""
authors = ["sds7629 <sds7629@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"

[tool.isort]
profile= "black"

[tool.black]
line_length = 120

[tool.mypy]
plugins = ['mypy_django_plugin.main']
ignore_missing_imports = true
python_version = 3.11
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true


[[tool.mypy.overrides]]
module = "settings"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "sessak.config.settings"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.8.0"
pydantic = "^2.6.3"
pytest-django = "^4.8.0"
django-stubs = "^4.2.7"
pyproject-pre-commit = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
